[package]
name = "brain"
version = "0.1.0"
authors = ["James Ian Pogue <jamesipogue@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
font8x8 = "0.2.7"
fontdue = "0.4.0"
genevo = "0.5.0"
itertools = "0.10.0"
petgraph = "0.5.1"
rand = { version = "0.8.3", features = ["small_rng"] }
rand_xorshift = "0.3.0"
rayon = "1.5.0"
